Fix a spacing issue

--- a/_sass/blocks/_two_column.scss
+++ b/_sass/blocks/_two_column.scss
@@ -83,6 +83,7 @@
 
 .content {
   margin-bottom: 60px;
+  @include clearfix;
 
   & > div {
     margin-top: 20px;
